Add meta for SEO

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="ja">
 <head>
   <title>Google Drive Gallery</title>
+  <meta name="keywords" content="よさこい, ソーラン, 祭り, 日本舞踊">
+  <meta name="description" content="Photos mainly for よさこい, others for ソーラン, kids dance, traditional Japanese dance and performances.">
+  <meta name="author" content="Cerberus">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="content-language" content="ja">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
