--- a/index.html
+++ b/index.html
@@ -121,9 +121,7 @@
     }
 
     // force redirect to v2
-    const queryParams = window.location.search;
-    const redirectUri = 'http://cerberusrei.clear-net.jp/public/viewer/index-v2.html?' + queryParams;
-    window.location.href = redirectUri;
+    window.location.href = 'http://cerberusrei.clear-net.jp/public/viewer/index-v2.html?' + window.location.search;
   </script>
 </head>
 <body>
