--- a/index-v2.html
+++ b/index-v2.html
@@ -105,7 +105,7 @@
 
   <script src="js/google-analytics-util.js"></script>
   <script src="js/albums.js"></script>
-  <script src="js/gallery.js"></script>
+  <script src="js/gallery.js?t=1716748938089"></script>
 
   <script type="text/javascript">
     window.onerror = function(error) {
