--- a/info.html
+++ b/info.html
@@ -1,21 +1,30 @@
 <p>
-    これはシンプルな写真/動画ビューアです。
+    これは第2版のシンプルな写真/動画ビューアです。
     <br/>
-    Google Driveからファイルを読み込みます。
+    もともとはGoogle Driveで直接バックアップされていたすべてのファイルが、現在は料金の支払いをやめて、第2版は個人のNASに移行されました。
     <br/>
+    <br/>
+    すべてのプレビュー画像はGoogle Drive（無料版）に保存されています。ダウンロード時には、元のファイルがNASからアクセスされます。
+</p>
+<p>
+    現在使用しているドメインはElecomが提供する無料サービスです。
+    安定していると思いますが、SSL証明書の関係で、一部の人が正常に閲覧できない可能性があります。
+    その場合は、ブラウザがElecomの証明書を受け入れるようにするのが最も簡単な解決方法です。
+</p>
+
+<p style="background-color: #e9ecef; border-radius: 10px;">
     誰でもこれらのファイルを閲覧し、ダウンロードすることができます。
     <br/><br/>
     <b>
         <span class="text-danger">
-            しかし、注意してください！
-            これらのファイルを、写真の被写体でない場合やそれに関連するグループでない場合には、どこにも使用しないでください。
+            しかし、注意してください！<br/>
+            もしあなたが被写体本人でも、被写体が所属する関連団体でもない場合、どこにも使用しないでください。<br/>
+            被写体本人は直接ダウンロードして使用することを歓迎します。所属チームはできるだけ被写体の同意を得てください。
         </span>
     </b>
 </p>
 
-<p>
-    ダウンロードの方法：
-</p>
+<b>ダウンロードの方法：</b>
 <ul>
     <li>
         画像：
@@ -26,17 +35,11 @@
         右クリックして画像を別名で保存するか、ボタン（<i class="bi bi-download"></i>）をクリックしてください。
     </li>
     <li>
-        ビデオ：ビデオをクリックすると、Google Driveにリダイレクトされます。Google Driveページ内のダウンロード機能を使用してください。
+        ビデオ：動画は現在ダウンロードできません。<br>（簡単なことですが、あまり興味がある人はいないと思うので、リンクの問題はまだ対処していません）
+        被写体本人または所属チームがダウンロードを希望する場合は、DMでご連絡ください）。
     </li>
 </ul>
-<p>
-    すべてのファイルはアクセスにGoogleアカウントは必要ありません。<br/>
-    デバイスにGoogle Driveアプリケーションがある場合、ファイルをダウンロードする前にアカウントを選択するように求められるかもしれません。<br/>
-    どのアカウントでも問題ありません、ファイルは誰にでも公開されています。<br/><br/>
-    私に対して許可を要求しないでください。<br/>
-    編集権限を申請し続ける場合、あなたがハッカーかもしれないため、Googleに報告します。
-</p>
 
-<p>
+<p style="background-color: #e9ecef; border-radius: 10px;">
     Author: cerberusreijp@gmail.com
 </p>
