Update layout for organized album

--- a/index-v2.html
+++ b/index-v2.html
@@ -88,6 +88,10 @@
       height: 512px;
       overflow-y: scroll;
     }
+
+    .organized-album {
+      background-color: #e9ecef;
+    }
   </style>
 
 
@@ -105,7 +109,7 @@
 
   <script src="js/google-analytics-util.js"></script>
   <script src="js/albums.js"></script>
-  <script src="js/gallery.js?t=1716748938089"></script>
+  <script src="js/gallery.js?t=1716828098450"></script>
 
   <script type="text/javascript">
     window.onerror = function(error) {
