Update title and keyword

--- a/index-v2.html
+++ b/index-v2.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <title>Google Drive Gallery</title>
-  <meta name="keywords" content="よさこい, ソーラン, 祭り, 日本舞踊">
+  <title>よさこい写真</title>
+  <meta name="keywords" content="よさこい, 鳴子踊り, ソーラン, 祭り, japanesefestival, japanesedance, 日本舞踊, 高知, 写真">
   <meta name="description" content="Photos mainly for よさこい, others for ソーラン, kids dance, traditional Japanese dance and performances.">
   <meta name="author" content="Cerberus">
   <meta name="robots" content="index, follow">
