Change css for selections

--- a/index-v2.html
+++ b/index-v2.html
@@ -231,10 +231,10 @@
       <div class="modal-header">
         <h5 class="modal-title">Album List</h5>
         <div class="album-filter-container">
-          <select name="year">
+          <select name="year" class="form-control">
             <option value=""> - </option>
           </select>
-          <select name="month">
+          <select name="month" class="form-control">
             <option value=""> - </option>
           </select>
         </div>
