Add feature for random display in home page

--- a/index-v2.html
+++ b/index-v2.html
@@ -148,7 +148,7 @@
 
   <script src="js/google-analytics-util.js"></script>
   <script src="js/albums.js?t=1718303167591"></script>
-  <script src="js/gallery.js?t=1718439101470"></script>
+  <script src="js/gallery.js?t=1718439101473"></script>
 
   <script type="text/javascript">
     window.onerror = function(error) {
@@ -171,7 +171,7 @@
   <div class="col">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb align-middle align-items-center">
-        loading <!-- this is for workaround to make content container to have correct margin by the height of this div -->
+        　 <!-- this is for workaround to make content container to have correct margin by the height of this div -->
       </ol>
     </nav>
   </div>
