Improvement for SEO

--- a/index-v2.html
+++ b/index-v2.html
@@ -4,7 +4,7 @@
   <title>よさこい写真</title>
   <meta name="keywords" content="よさこい, 鳴子踊り, ソーラン, 祭り, japanesefestival, japanesedance, 日本舞踊, 高知, 写真">
   <meta name="description" content="よさこいの写真と動画がいっぱい。高知の祭り、伝統的な日本の踊りやパフォーマンスの写真もあります." lang="ja">
-  <meta name="description" content="Photos mainly for よさこい, others for ソーラン, kids dance, traditional Japanese dance and performances." lang="en">
+  <meta name="description" content="Photos mainly for yosakoi, others for soran, kids dance, traditional Japanese dance and performances." lang="en">
   <meta name="author" content="Cerberus">
   <meta name="robots" content="index, follow">
   <meta http-equiv="content-language" content="ja">
