Improve for SEO

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>よさこい写真</title>
   <meta name="keywords" content="よさこい, 鳴子踊り, ソーラン, 祭り, japanesefestival, japanesedance, 日本舞踊, 高知, 写真">
-  <meta name="description" content="よさこいの写真と動画がいっぱい。高知の祭り、伝統的な日本の踊りやパフォーマンスの写真もあります." lang="ja">
+  <meta name="description" content="よさこいの写真と動画がいっぱい。高知の祭り、ソーラン、伝統的な日本の踊りやパフォーマンスの写真もあります." lang="ja">
   <meta name="description" content="Photos mainly for yosakoi, others for soran, kids dance, traditional Japanese dance and performances." lang="en">
   <meta name="author" content="Cerberus">
   <meta name="robots" content="index, follow">
@@ -147,8 +147,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <script src="js/google-analytics-util.js"></script>
-  <script src="js/albums.js?t=1718303167591"></script>
-  <script src="js/gallery.js?t=1719252725927"></script>
+  <script src="js/albums.js?t=1719417244453"></script>
+  <script src="js/gallery.js?t=1719417244453"></script>
 
   <script type="text/javascript">
     window.onerror = function(error) {
