--- a/info.html
+++ b/info.html
@@ -1,3 +1,18 @@
+2024/08/15 Updated
+<p style="background-color: #deeffa; border-radius: 10px;">
+    大型イベントの写真はたくさんあり、時には整理して共有する時間がないこともあります。<br/>
+    もし友人やチームの写真を探している方がいれば、
+    <a href="https://docs.google.com/spreadsheets/d/1akaUrgskAILLJkIqGIXgkLqrna7BVpWwhFoHYZLBxR0/view" target="_blank">
+        こちら
+    </a>から私が撮影したが未整理/未共有の部分を確認できます。<br/>
+    また、この<a href="https://docs.google.com/forms/d/e/1FAIpQLSeKsgd2njFQ7IZPUszHDfOkeY5xs30ZCNbx_Ots_EU5hyRi6g/viewform?usp=sf_link" target="_blank">
+    匿名フォーム
+    </a>を通じて、誰かが確認したいことを知らせてください。
+    <br/>
+    <br/>
+    身分を確認することはできませんが、親しい友人やチームの方々のみがご記入いただけると幸いです。
+</p>
+
 <p>
     これは第2版のシンプルな写真/動画ビューアです。
     <br/>
@@ -5,11 +20,6 @@
     <br/>
     <br/>
     すべてのプレビュー画像はGoogle Drive（無料版）に保存されています。ダウンロード時には、元のファイルがNASからアクセスされます。
-</p>
-<p>
-    現在使用しているドメインはElecomが提供する無料サービスです。
-    安定していると思いますが、SSL証明書の関係で、一部の人が正常に閲覧できない可能性があります。
-    その場合は、ブラウザがElecomの証明書を受け入れるようにするのが最も簡単な解決方法です。
 </p>
 
 <p style="background-color: #e9ecef; border-radius: 10px;">
@@ -35,8 +45,8 @@
         右クリックして画像を別名で保存するか、ボタン（<i class="bi bi-download"></i>）をクリックしてください。
     </li>
     <li>
-        ビデオ：動画は現在ダウンロードできません。<br>（簡単なことですが、あまり興味がある人はいないと思うので、リンクの問題はまだ対処していません）
-        被写体本人または所属チームがダウンロードを希望する場合は、DMでご連絡ください）。
+        ビデオ：各プレビュー画像の右下隅には、オリジナルファイルをダウンロードするためのボタンがあります。
+        （<i class="bi bi-download"></i>）
     </li>
 </ul>
 
