--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="よさこい写真">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="http://cerberusrei.clear-net.jp/public/images/20240601_144634.jpg">
-  <meta property="og:url" content="http://cerberusrei.clear-net.jp/public/viewer/index-v2.html">
+  <meta property="og:image" content="https://linen-sun-367015.web.app/images/20240601_144634.jpg">
+  <meta property="og:url" content="https://linen-sun-367015.web.app/index.html">
   <meta property="og:site_name" content="よさこい写真">
   <meta property="og:description" content="よさこいの写真と動画がいっぱい。高知の祭り、伝統的な日本の踊りやパフォーマンスの写真もあります.">
 
   <!-- will be helpful after creating cache for each page -->
-  <link rel="canonical" href="http://cerberusrei.clear-net.jp/public/viewer/index-v2.html">
+  <link rel="canonical" href="https://linen-sun-367015.web.app/index.html">
 
   <!-- Structured data for better SEO -->
   <!-- 。 -->
@@ -147,7 +147,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <script src="js/google-analytics-util.js"></script>
-  <script src="js/albums.js?t=1725751170273"></script>
+  <script src="js/albums.js?t=1725820064232"></script>
   <script src="js/gallery.js?t=1719417244453"></script>
 
   <script type="text/javascript">
