Use firebase functions app to output index.html with unique canonical link

--- a/functions/public/index.html
+++ b/functions/public/index.html
@@ -146,9 +146,9 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-  <script src="js/google-analytics-util.js"></script>
-  <script src="js/albums.js?t=1734802455324"></script>
-  <script src="js/gallery.js?t=1733849752022"></script>
+  <script src="/js/google-analytics-util.js"></script>
+  <script src="/js/albums.js?t=1734802455324"></script>
+  <script src="/js/gallery.js?t=1735512735656"></script>
 
   <script type="text/javascript">
     window.onerror = function(error) {
