Add Awa Odori as a new category

--- a/functions/public/index.html
+++ b/functions/public/index.html
@@ -2,8 +2,8 @@
 <html lang="ja">
 <head>
   <title>よさこい写真</title>
-  <meta name="keywords" content="よさこい, 鳴子踊り, ソーラン, 祭り, japanesefestival, japanesedance, 日本舞踊, 高知, 写真">
-  <meta name="description" content="よさこいの写真と動画がいっぱい。高知の祭り、ソーラン、伝統的な日本の踊りやパフォーマンスの写真もあります." lang="ja">
+  <meta name="keywords" content="よさこい, 鳴子踊り, ソーラン, 阿波踊り, 祭り, japanesefestival, japanesedance, 日本舞踊, 高知, 写真">
+  <meta name="description" content="よさこいの写真と動画がいっぱい。高知の祭り、ソーラン、阿波踊り、キッズダンス、伝統的な日本の踊りやパフォーマンスの写真もあります." lang="ja">
   <meta name="description" content="Photos mainly for yosakoi, others for soran, kids dance, traditional Japanese dance and performances." lang="en">
   <meta name="author" content="Cerberus">
   <meta name="robots" content="index, follow">
@@ -148,7 +148,7 @@
 
   <script src="/js/google-analytics-util.js"></script>
   <script src="/js/albums.js?t=1734802455324"></script>
-  <script src="/js/gallery.js?t=1735550035694"></script>
+  <script src="/js/gallery.js?t=1735550035696"></script>
 
   <script type="text/javascript">
     window.onerror = function(error) {
