Fix the photo frame to display the image at a size that fits the screen

--- a/functions/public/index.html
+++ b/functions/public/index.html
@@ -63,6 +63,14 @@
       background-color: transparent;
     }
 
+    #photoFrame .modal-body {
+      padding: 0; /* Allow image to be fix with device window */
+    }
+
+    #photoFrame .modal-body .container {
+      padding: 0; /* Allow image to be fix with device window */
+    }
+
     /* customize for popover info content */
     .custom-popover {
       min-width: 400px;
