--- a/functions/public/index.html
+++ b/functions/public/index.html
@@ -156,7 +156,7 @@
 
   <script src="/js/google-analytics-util.js"></script>
   <script src="/js/albums.js?t=1734802455324"></script>
-  <script src="/js/gallery.js?t=1735550035696"></script>
+  <script src="/js/gallery.js?t=1735639447556"></script>
 
   <script type="text/javascript">
     window.onerror = function(error) {
@@ -276,6 +276,9 @@
     </div>
   </div>
 </div>
+
+<div class="position-fixed top-50 start-50 translate-middle toast-container"
+     style="z-index: 1050; width: auto; max-width: 100%;"></div>
 
 <!-- scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
