--- a/functions/public/home.html
+++ b/functions/public/home.html
@@ -48,7 +48,7 @@
 
   <style>
     body {
-      background-image: linear-gradient(to bottom, #f0f0f0, #dcdcdc);
+      background-image: linear-gradient(to bottom, #dcdcdc, #dcdcdc);
       background-color: rgba(255, 255, 255, 0.9);
     }
 
@@ -152,10 +152,11 @@
   </script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 
   <script src="/js/google-analytics-util.js"></script>
   <script src="/js/albums.js?t=1740415205479"></script>
-  <script src="/js/gallery.js?t=1740896727870"></script>
+  <script src="/js/gallery.js?t=1740929344568"></script>
 
   <script type="text/javascript">
     window.onerror = function(error) {
@@ -185,7 +186,7 @@
 </div>
 
 <div class="container text-center">
-  <div id="fileListContainer">
+  <div id="fileListContainer" class="js-masonry">
   </div>
 
   <div class="spinner-border" role="status">
