--- a/functions/public/home.html
+++ b/functions/public/home.html
@@ -152,7 +152,6 @@
   </script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 
   <script src="/js/google-analytics-util.js"></script>
   <script src="/js/albums.js?t=1741622539893"></script>
@@ -186,7 +185,7 @@
 </div>
 
 <div class="container text-center">
-  <div id="fileListContainer" class="js-masonry">
+  <div id="fileListContainer">
   </div>
 
   <div class="spinner-border" role="status">
