Support password protection, which rely on server side change

--- a/functions/public/info.html
+++ b/functions/public/info.html
@@ -1,3 +1,11 @@
+2025/06/15 Updated
+<p style="background-color: #e9ecef; border-radius: 10px;">
+    一部の内容はSNSでの公開が禁止されているため、ファイルにはパスワードを設定しています。<br/>
+    鍵のアイコンをクリックし、パスワードを入力すると閲覧できます。<br/>
+    初期パスワードは、たくさんの素晴らしいチームの中で私が一番好きなチームの名前です。<br/>
+    分からない場合は…誰かに聞くか、私に直接聞いてくださいね。<br/>
+</p>
+
 2024/08/15 Updated
 <p style="background-color: #deeffa; border-radius: 10px;">
     大型イベントの写真はたくさんあり、時には整理して共有する時間がないこともあります。<br/>
